<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">KeepContact</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_contact_to_call">Asking news from ..</string>
    <string name="action_done">Done</string>
    <string name="action_about">About</string>
    <string name="aboutApp">With KeepContact, I wanted an application that help people to keep in touch with their friends or with their family. <br /><br />Built by Guillaume Kermarrec</string>
    <string name="enableReminder">Enable the Reminders</string>
    <string name="enableReminderSummary">Reminders will help you to keep your friends in touch</string>
    <string name="GeneralSettings">General Settings</string>
    <string name="AboutSetting">About</string>
    <string name="sync_frequency_summary">updating contact</string>
    <string name="sync_frequency">update</string>
    <string name="aboutSummary">If you want to know more about the keepContact</string>
    <string name="about">About</string>
    <string name="rateSummary">If you like KeepContac, please rate it</string>
    <string name="rate">Rate KeepContact</string>
    <string name="StartTimePickerSummary">Hour you want to be notify</string>
    <string name="StartTimePicker">Starting Hour</string>
    <string name="EndTimePickerSummary">Hour you want to be no more notify</string>
    <string name="EndTimePicker">Ending hour</string>
    <string name="LapsTimePickerSummary">Time betwenn each reminders</string>
    <string name="LapsTimePicker">Time Laps</string>
    <string name="Question_DeleteContact">Do you want to remove this contact</string>
    <string name="whatToDo">What do you want to do ?</string>
    <string name="title_activity_dialogue__call_or_sms">Dialogue_CallOrSMS</string>
    <string name="title_activity_send_message">SendMessage</string>
    <string name="title_activity_select_call_message">SelectCallMessage</string>

</resources>